# docs.rs

./: .docker.env.sample  .dockerignore  .editorconfig  .env.sample  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Commands.md  Dockerfile  INSTALLATION.md  Justfile  LICENSE  NOTES.d  NOTES.md  README.md  Vagrantfile  azure-pipelines.yml  build.rs  build.sh  clippy.toml  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  main.js  nginx.conf  package-lock.json  package.json  q  rust-toolchain.toml  rustfmt.toml  test.sh  test.txt  test_unstable_flags  tomlfmt.toml  triagebot.toml
builder/: Cargo.toml
builder/src/: build_metadata.rs  build_result.rs  builder.rs  lib.rs  main.rs  package_metadata.rs  utils.rs
crates/docs_rs_build_utils/: Cargo.toml
crates/docs_rs_build_utils/src/: config.rs  lib.rs  limits.rs
crates/docs_rs_builder/: Cargo.toml
crates/docs_rs_builder/src/: config.rs  lib.rs  metrics.rs
crates/docs_rs_builder/src/docbuilder/: rustwide_builder.rs
crates/docs_rs_builder/src/utils/: mod.rs
crates/docs_rs_cargo_metadata/: Cargo.toml
crates/docs_rs_cargo_metadata/src/: db.rs  lib.rs
crates/docs_rs_database/: Cargo.toml
crates/docs_rs_database/migrations/: 20240221114302_ensure_no_buildless_releases_exist.up.sql  20240221124844_multi_stage_build_status.up.sql  20240227040753_add_owner_kind.up.sql  20240311202914_release_status_materialized.up.sql  20240313103708_make_release_fields_optional.down.sql  20241021050229_builds-started-finished.down.sql  20241219091521_owner-avatar-longer.down.sql  20241219091521_owner-avatar-longer.up.sql  20251202020754_remove-file-public.down.sql
crates/docs_rs_database/src/: config.rs  lib.rs  migrate.rs  service_config.rs
crates/docs_rs_database/src/types/: krate_name.rs  mod.rs
crates/docs_rs_registry_api/: Cargo.toml
crates/docs_rs_registry_api/src/: lib.rs
crates/docs_rs_repository_stats/: Cargo.toml
crates/docs_rs_repository_stats/src/: github.rs  gitlab.rs  updater.rs
crates/docs_rs_watcher/: Cargo.toml
crates/docs_rs_watcher/src/: build_queue.rs  config.rs  index.rs  lib.rs  main.rs  service_metrics.rs  utils.rs
crates/docs_rs_watcher/src/consistency/: data.rs  db.rs  index.rs  mod.rs
crates/docs_rs_watcher/src/db/: delete.rs  mod.rs
crates/docs_rs_watcher/src/repositories/: github.rs  gitlab.rs  mod.rs  updater.rs
crates/docs_rs_web/: Cargo.toml
crates/docs_rs_web/src/: build_details.rs  builds.rs  cache.rs  crate_details.rs  error.rs  features.rs  highlight.rs  lib.rs  metrics.rs  releases.rs  routes.rs  rustdoc.rs  sitemap.rs  source.rs  statics.rs
crates/docs_rs_web/src/extractors/: context.rs  path.rs  rustdoc.rs
crates/docs_rs_web/src/page/: templates.rs  web_page.rs
crates/docs_rs_web/src/utils/: html.rs  mod.rs  rustc_version.rs
crates/docs_rs_web/templates/: base.html
crates/docs_rs_web/templates/core/: Cargo.toml.example
crates/docs_rs_web/templates/crate/: details.html  features.html
crates/docs_rs_web/templates/releases/: activity.html  feed.xml  releases.html
crates/docs_rs_web/templates/rustdoc/: topbar.html  vendored.html
crates/font-awesome-as-a-crate/: Cargo.toml  README.md  build.rs
crates/font-awesome-as-a-crate/fontawesome-free-5.14.0-web/: VENDOR.md
crates/font-awesome-as-a-crate/fontawesome-free-6.2.0-desktop/: VENDOR.md
crates/font-awesome-as-a-crate/src/: lib.rs
crates/lib/docs_rs_build_limits/: Cargo.toml
crates/lib/docs_rs_build_limits/.sqlx/: query-4115addabb6f03cd0de31ac2ddeafd6797b25b99a7112cb68a93a4fac5b07a23.json  query-4894c7d8c4e354dca1d952362b2e0cb25441e8e65b273e01ed86d2d3ecebfe84.json  query-5ad9cd6cd9d444d258f7486fda178d4dd071cf43cb0ea950574af8e2f37b4a21.json  query-718110e13b155eb56cac3f21e1db3b61db1b2d8ba26c160e38e739fd18caa0fc.json  query-7633edc3884e73fc8edad8f5e1539b79ab4ea2ff504cf2319324403b979365e1.json  query-96038b2acad7957be667de55421e59e078a8dd8972e65dc6223d94eecfcbf4ad.json  query-a708e47c863614354e9a756da43b47d6071608366fd01f0d67db0991eb588b68.json  query-d5d73e5899c9f0318d0357c7c66a980796789de5cb46b0cd169fcc86f13268c9.json
crates/lib/docs_rs_build_limits/src/: blacklist.rs  config.rs  lib.rs  limits.rs  overrides.rs
crates/lib/docs_rs_build_queue/: Cargo.toml
crates/lib/docs_rs_build_queue/.sqlx/: query-1002ada46a8b06269d7aa42acc52e90e944d9009d75ad527e7442e312be98ea9.json  query-276400867113567750e95f66264185a6347ca3ae4b703914c08c57d5ac5580af.json  query-5cf9b185b54dde447b6ba1458178c4fad4c75e72c6a7b7735d17835b9b746ac3.json  query-83fbc5e302bab22138c384ee71ac018e2319f46c86d8d93a8fdfdbcc49e09885.json  query-8a31ef6960f9769024fc7818761628ebb710041c7397b4727a670e76beb1e2a7.json  query-946de01935ee281874744ced08e7af117701e86fd1119c77da01271940a0ea31.json  query-af1b135f6b08d1b7a8a4c79e1b3bb821decc862cf905aa21feff167d401befbf.json  query-bcb6953f312804ebdad0370c2eaf2c816378c236c5d2028c3882a1b12c6362a1.json  query-fc654c9fccbceba15f4aceea9fe0b637290907671172571ed76fad04622d027f.json
crates/lib/docs_rs_build_queue/src/: config.rs  lib.rs  metrics.rs  priority.rs  rebuilds.rs  types.rs
crates/lib/docs_rs_build_utils/: Cargo.toml
crates/lib/docs_rs_build_utils/src/: limits.rs  overrides.rs
crates/lib/docs_rs_cargo_metadata/: Cargo.toml
crates/lib/docs_rs_cargo_metadata/src/: db.rs  lib.rs  metadata.rs  release_dependency.rs
crates/lib/docs_rs_context/: Cargo.toml
crates/lib/docs_rs_crate_zip/: Cargo.toml
crates/lib/docs_rs_crates_io/: Cargo.toml
crates/lib/docs_rs_database/: Cargo.toml  build.rs
crates/lib/docs_rs_fastly/: Cargo.toml
crates/lib/docs_rs_headers/: Cargo.toml
crates/lib/docs_rs_logging/: Cargo.toml
crates/lib/docs_rs_opentelemetry/: Cargo.toml
crates/lib/docs_rs_registry_api/: Cargo.toml
crates/lib/docs_rs_repository_stats/: Cargo.toml
crates/lib/docs_rs_rustdoc_json/: Cargo.toml
crates/lib/docs_rs_storage/: Cargo.toml
crates/lib/docs_rs_test_fakes/: Cargo.toml
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: web.rs
metadata/: Cargo.toml  build.rs  lib.rs
(+897 files in other folders)
