[workspace]
resolver = "2" 

members = ["crates/bin/*", "crates/lib/*", "integration_tests"]

default-members = [
    "crates/bin/docs_rs_admin",
    "crates/bin/docs_rs_builder",
    "crates/bin/docs_rs_watcher",
    "crates/bin/docs_rs_web",
]

exclude = [
    ".rustwide-docker",
    ".workspace",
    "crates/bin/docs_rs_builder/.rustwide-docker",
    "crates/bin/docs_rs_builder/.workspace",
    "crates/bin/docs_rs_builder/tests/crates",
    "ignored",
]

[workspace.package]
version = "0.6.0"
authors = ["Onur Aslan <onuraslan@gmail.com>", "The Rust Project Developers"]
license = "MIT"
repository = "https://github.com/rust-lang/docs.rs"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.42", features = ["backtrace"] }
askama = "0.15.4"
async-stream = "0.3.5"
axum-extra = { version = "0.12.0", features = ["typed-header", "routing", "middleware"] }
base64 = "0.22"
bon = { version = "3.8.1", features = ["experimental-overwritable"] }
chrono = { version = "0.4.11", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.0.22", features = [ "derive" ] }
futures-util = "0.3.5"
http = "1.0.0"
itertools = "0.14.0" 
mime = "0.3.16"
mockito = "1.0.2"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic",  "metrics"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
pretty_assertions = "1.4.0"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", features = ["json", "gzip", "stream"] }
sentry = { version = "0.46.0", features = ["panic", "tracing", "tower-http", "backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4.0"
slug = "0.1.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "sqlite", "chrono" ] }
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3.1.0"
test-case = "3.0.0"
thiserror = "2.0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "macros", "process", "sync"] }
toml = "0.9.2"
tracing = "0.1.37"
url = { version = "2.1.1", features = ["serde"] }
walkdir = "2"
zip = { version = "8.0.0", default-features = false, features = ["bzip2"] }

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.dev]
# recommendation coming from 
# https://doc.rust-lang.org/nightly/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
# for our normal dev work, line-tables are good enough to see line numbers in backtraces.
debug = "line-tables-only"
# mostly for mac os, splits debug info into separate files to speed up incremental builds
# https://corrode.dev/blog/tips-for-faster-rust-compile-times/#macos-only-faster-incremental-debug-builds
split-debuginfo = "unpacked"

[profile.dev.build-override]
# optimize proc macros & build scripts, make them execute faster 
# https://corrode.dev/blog/tips-for-faster-rust-compile-times/#avoid-procedural-macro-crates
opt-level = 3

[profile.dev.package."*"]
# no debug information for dependencies
debug = false

[profile.debugging]
# big "debugging" profile, if you need to do real interactive debugging
inherits = "dev"
debug = true
