[package]
name = "docsrs-builder"
version = "0.0.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
docsrs-package = { path = "../package" }
cargo = { git = "https://github.com/rust-lang/cargo.git" }
failure = "0.1"
toml = "0.4"
regex = "1.1"
serde_json = "1"
reqwest = "0.9"
semver = "0.9"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
walkdir = "2.2"
clap = "2"
log = "0.4"
env_logger = "0.6"

[dev-dependencies]
tempfile = "3"
