[package]
name = "docsrs-metadata"
version = "0.1.0"
authors = ["Joshua Nelson <jyn514@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/rust-lang/docs.rs"
description = "Document crates the same way docs.rs would"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5", default-features = false }
thiserror = "1"
