[package]
name = "docs_rs_cargo_metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
docs_rs_database = { path = "../docs_rs_database" }
rustwide = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
