[package]
name = "docs_rs_database"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
serde_with = { workspace = true }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry" }
futures-util = { workspace = true }
opentelemetry = { workspace = true }
semver = { workspace = true }
sqlx = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
testing = []
