[package]
name = "docs_rs_registry_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
docs_rs_database = { path = "../docs_rs_database" }
docs_rs_utils = { path = "../docs_rs_utils" }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
bincode = { workspace = true }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
