[package]
name = "docs_rs_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
crates-index = { version = "3.0.0", default-features = false, features = ["git", "git-https", "git-performance", "parallel"] }
crates-index-diff = { version = "28.0.0", features = [ "max-performance" ]}
docs_rs_database = { path = "../docs_rs_database" }
docs_rs_build_queue = { path = "../docs_rs_build_queue" }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
itertools = { workspace = true }
sqlx = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
async-trait = "0.1.83"
futures-util = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
docs_rs_utils = { path = "../docs_rs_utils" }

[dev-dependencies]
mockito = { workspace = true }
