[package]
name = "docs_rs_build_limits"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
docs_rs_config = { path = "../docs_rs_config" }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_types = { path = "../docs_rs_types" }
futures-util = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
docs_rs_database = { path = "../docs_rs_database", features = ["testing"] }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry", features = ["testing"] }
docs_rs_types = { path = "../docs_rs_types", features = ["testing"] }
pretty_assertions = { workspace = true }
tokio = { workspace = true }

