[package]
name = "docs_rs_build_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_utils = { path = "../docs_rs_utils" }
futures-util = { workspace = true }
serde = { workspace = true}
sqlx = { workspace = true }
tracing = { workspace = true }

