[package]
name = "docs_rs_cargo_metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true }
docs_rs_types = { path = "../docs_rs_types" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }

[features]
testing = []
