[package]
name = "docs_rs_cargo_metadata"
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
testing = []

[dependencies]
anyhow = { workspace = true }
docs_rs_types = { path = "../docs_rs_types" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
