[package]
name = "docs_rs_crate_zip"
description = "read specific files from the crates.io source zip archive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
# async-compression = { version = "0.4.42", features = ["deflate", "tokio"] }
async-compression = { workspace = true }
# futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
futures-util = { workspace = true }
# reqwest = { version = "0.13.4", default-features = false, features = ["json", "stream", "rustls"] }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.18"
tokio = { workspace = true }
tokio-util = { workspace = true }
docs_rs_utils = { path = "../docs_rs_utils" }
