[package]
name = "docs_rs_database"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry" }
docs_rs_types = { path = "../docs_rs_types" }
futures-util = { workspace = true }
hex = "0.4.3"
opentelemetry = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry", features = ["testing"] }
test-case = { workspace = true }

[features]
testing = [
    "dep:rand",
    "docs_rs_opentelemetry/testing",
]
