[package]
name = "docs_rs_fastly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
docs_rs_database = { path = "../docs_rs_database" }
docs_rs_env_vars = { path = "../docs_rs_env_vars" }
docs_rs_headers = { path = "../docs_rs_headers" }
docs_rs_opentelemetry = { path = "../docs_rs_opentelemetry" }
docs_rs_utils = { path = "../docs_rs_utils" }
http = { workspace = true }
itertools = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
